@@ -19,7 +19,6 @@ jobs:
   ci:
     runs-on: ${{ matrix.os }}
     if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
-    needs: notify
     strategy:
       fail-fast: false
       matrix:
