@@ -1,3 +1,5 @@
+- bump minimum PDL to 2.083 as tricpy needs ArgOrder
+
 0.38 2024-02-24
 - tricpy now supports native-complex types
 - tricpy now defaults to upper - thanks @jo-37
